fix icon spacing

--- a/packages/assets/scss/03-organisms/_header-alerts.scss
+++ b/packages/assets/scss/03-organisms/_header-alerts.scss
@@ -102,9 +102,7 @@
     }
 
     &__icon {
-      top: 20px;
       left: 10px;
-      line-height: 1.15;
 
       svg {
         width: 20px;
